Under sampling using Neighborhood cleaning rule

--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -2388,6 +2388,112 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####downsampling"
+      ],
+      "metadata": {
+        "id": "3Vt6-oiO3X3_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "downsampler = NeighbourhoodCleaningRule(n_neighbors=3, threshold_cleaning=0.5)\n",
+        "x_train_dres, y_train_dres = downsampler.fit_resample(x_train, y_train)"
+      ],
+      "metadata": {
+        "id": "Z99d1wlM3PGu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Before UnderSampling, the shape of train_X: {}'.format(x_train.shape))\n",
+        "print('Before UnderSampling, the shape of train_y: {} \\n'.format(y_train.shape))\n",
+        "\n",
+        "print('After UnderSampling, the shape of train_X: {}'.format(x_train_dres.shape))\n",
+        "print('After UnderSampling, the shape of train_y: {} \\n'.format(y_train_dres.shape))\n",
+        "\n",
+        "print(\"Counts of label '0' - Before UnderSampling:{}, After UnderSampling: {}\".format(sum(y_train == 0),sum(y_train_dres == 0)))\n",
+        "print(\"Counts of label '1' - Before UnderSampling:{}, After UnderSampling: {}\".format(sum(y_train == 1),sum(y_train_dres == 1)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kMpbRHYS3uxc",
+        "outputId": "b957f035-c2d3-4605-b98c-26ec57a73d0b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before UnderSampling, the shape of train_X: (21296, 30)\n",
+            "Before UnderSampling, the shape of train_y: (21296,) \n",
+            "\n",
+            "After UnderSampling, the shape of train_X: (17412, 30)\n",
+            "After UnderSampling, the shape of train_y: (17412,) \n",
+            "\n",
+            "Counts of label '0' - Before UnderSampling:16808, After UnderSampling: 12924\n",
+            "Counts of label '1' - Before UnderSampling:4488, After UnderSampling: 4488\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train_dres, y_train_dres = downsampler.fit_resample(x_train_dres, y_train_dres)\n"
+      ],
+      "metadata": {
+        "id": "4r0drT-93zCR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Before UnderSampling, the shape of train_X: {}'.format(x_train.shape))\n",
+        "print('Before UnderSampling, the shape of train_y: {} \\n'.format(y_train.shape))\n",
+        "\n",
+        "print('After UnderSampling, the shape of train_X: {}'.format(x_train_dres.shape))\n",
+        "print('After UnderSampling, the shape of train_y: {} \\n'.format(y_train_dres.shape))\n",
+        "\n",
+        "print(\"Counts of label '0' - Before UnderSampling:{}, After UnderSampling: {}\".format(sum(y_train == 0),sum(y_train_dres == 0)))\n",
+        "print(\"Counts of label '1' - Before UnderSampling:{}, After UnderSampling: {}\".format(sum(y_train == 1),sum(y_train_dres == 1)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2L4HKjDz42FG",
+        "outputId": "ae719448-bc42-40d4-94f6-c9083deca99f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before UnderSampling, the shape of train_X: (21296, 30)\n",
+            "Before UnderSampling, the shape of train_y: (21296,) \n",
+            "\n",
+            "After UnderSampling, the shape of train_X: (14791, 30)\n",
+            "After UnderSampling, the shape of train_y: (14791,) \n",
+            "\n",
+            "Counts of label '0' - Before UnderSampling:16808, After UnderSampling: 10303\n",
+            "Counts of label '1' - Before UnderSampling:4488, After UnderSampling: 4488\n"
+          ]
+        }
+      ]
     }
   ]
 }
