PCA with no resampling

--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -5,7 +5,19 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "Fg9XHyneLpPb"
+        "gcKIbdwWLi8A",
+        "x8p5My8Y6A8G",
+        "jCoUBBILLsrx",
+        "N1xTJJnpkeGu",
+        "Fg9XHyneLpPb",
+        "X4YG4U2Hn6at",
+        "v_YdOHL3oGlZ",
+        "7hDF24AbphL1",
+        "6Daox8BNwSPc",
+        "v_MUyTwTwmgu",
+        "cU0hWRbRnpTR",
+        "SOycpx4lxW-I",
+        "3Vt6-oiO3X3_"
       ],
       "include_colab_link": true
     },
@@ -2492,6 +2504,92 @@
             "Counts of label '0' - Before UnderSampling:16808, After UnderSampling: 10303\n",
             "Counts of label '1' - Before UnderSampling:4488, After UnderSampling: 4488\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###PCA"
+      ],
+      "metadata": {
+        "id": "0SmLImgJ5FFH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####no resampling"
+      ],
+      "metadata": {
+        "id": "VYTQUWnj88tD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PCanalysis = PCA()\n",
+        "x_train_pca = PCanalysis.fit_transform(x_train)\n",
+        "print(\"Variance Ratio: \" ,np.cumsum(PCanalysis.explained_variance_ratio_))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "htddM9F28-yY",
+        "outputId": "7f904f41-323b-4704-a2c1-146532e3b64b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Variance Ratio:  [0.16462406 0.26836134 0.34306381 0.41053816 0.47319864 0.52278867\n",
+            " 0.56543052 0.60662328 0.64751193 0.68777819 0.72613252 0.76313788\n",
+            " 0.79892112 0.83280874 0.86645296 0.90002942 0.93300633 0.96153991\n",
+            " 0.98969758 0.99483158 0.99769644 1.         1.         1.\n",
+            " 1.         1.         1.         1.         1.         1.        ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PCanalysis = PCA(19)\n",
+        "X_train_pca = PCanalysis.fit_transform(x_train)\n",
+        "X_test_transformed_pca = PCanalysis.transform(x_test)"
+      ],
+      "metadata": {
+        "id": "DziZApb19LVo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train_pca.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HWfSUlNv9XVb",
+        "outputId": "82d169fc-91b3-4940-e8b7-8bc6ea1496ab"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(21296, 19)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 224
         }
       ]
     }
