--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -2914,6 +2914,105 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Models"
+      ],
+      "metadata": {
+        "id": "lMjexNL18rKU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "from sklearn.model_selection import StratifiedKFold\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import make_scorer\n",
+        "from sklearn.metrics import accuracy_score"
+      ],
+      "metadata": {
+        "id": "LI2sbyll-GFE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def scores(y_test, y_prediction):\n",
+        "  print('Analysis of the Algorithm:\\n')\n",
+        "  print(confusion_matrix(y_test, y_prediction))\n",
+        "  print(confusion_matrix(y_test, y_prediction))\n",
+        "  print(classification_report(y_test, y_prediction))\n",
+        "  print('Accuracy:',accuracy_score(y_test, y_prediction))\n",
+        "  print('Precision:',precision_score(y_test, y_prediction, average='weighted'))\n",
+        "  print('Recall:',recall_score(y_test, y_prediction, average='weighted'))\n",
+        "  print('F1 Score:',f1_score(y_test, y_prediction, average='weighted'))"
+      ],
+      "metadata": {
+        "id": "gO4_nE_F_NYv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def roc(y_test, y_prediction):\n",
+        "  falsePositiveRate = dict()\n",
+        "  truePositiveRate = dict()\n",
+        "  threshold = dict()\n",
+        "\n",
+        "  for i in range(6):    \n",
+        "      falsePositiveRate[i], truePositiveRate[i], threshold[i] = roc_curve(y_test, y_prediction, pos_label=i)\n",
+        "\n",
+        "  plt.plot(falsePositiveRate[0], truePositiveRate[0], linestyle='--',color='blue', label='Class 0 vs Rest')\n",
+        "  plt.plot(falsePositiveRate[1], truePositiveRate[1], linestyle='--',color='yellow', label='Class 1 vs Rest')\n",
+        "\n",
+        "  plt.title('Multiclass ROC curve')\n",
+        "  plt.xlabel('False Positive Rate')\n",
+        "  plt.ylabel('True Positive rate')\n",
+        "  plt.legend(loc='best')\n",
+        "  plt.savefig('Multiclass ROC curve for LR ',dpi=300)"
+      ],
+      "metadata": {
+        "id": "M9QuN3RQ_s_9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# summarize results\n",
+        "def results(grid_result):\n",
+        "  print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+        "  means = grid_result.cv_results_['mean_test_score']\n",
+        "  stds = grid_result.cv_results_['std_test_score']\n",
+        "  params = grid_result.cv_results_['params']\n",
+        "  for mean, stdev, param in zip(means, stds, params):\n",
+        "      print(\"%f (%f) with: %r\" % (mean, stdev, param))"
+      ],
+      "metadata": {
+        "id": "Uw_MJW_--nNT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resultDic={}"
+      ],
+      "metadata": {
+        "id": "_bA8CxGHWxlf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
