--- a/CMPE_255_Final.ipynb
+++ b/CMPE_255_Final.ipynb
@@ -4197,16 +4197,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Next commit"
-      ],
-      "metadata": {
-        "id": "uGK-cctVYH_0"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Decision Tree with gridsearchCV"
+        "##Decision Tree with gridsearchCV  (Contributor Mounish Juvvadi)"
       ],
       "metadata": {
         "id": "PSDjM_gGKKBO"
@@ -5497,7 +5488,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Random Forest with gridsearchCV"
+        "##Random Forest with gridsearchCV (Contributor Mounish Juvvadi)"
       ],
       "metadata": {
         "id": "VLM3xWP6iEX3"
@@ -6904,7 +6895,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## DNN \n"
+        "## DNN  (Contributor Mounish Juvvadi)"
       ],
       "metadata": {
         "id": "tFLu1C3_koMw"
